log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output
  labels:
    app: log-output
spec:
  selector:
    app: log-output
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
